--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,25 @@
   font-family: regular;
 }
 
+.background-image{
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.342),rgba(0, 0, 0, 0.342)), url('./images/background.jpg');
+  background-size: cover;
+  background-position: center; */
+  display: block;
+  /* filter: blur(5px); */
+  background-color: #323B42;
+  height: 800px;
+  z-index: 1;
+  position: fixed;
+  left: 0; right: 0;
+}
+
+.container{
+  left: 0; right: 0;
+  z-index: 2;
+  position: fixed;
+}
+
 .logo-text{
   font-size: 18px;
   font-family: light;
@@ -53,4 +72,56 @@
 .main-nav li:hover{
   border-bottom: 4px solid orange;
   transition: border-bottom 0.2s;
+}
+
+.app-container{
+  width: 50%;
+  height: 500px;
+  margin: 25px 25% 0 25%;
+}
+
+@keyframes fadeIn{
+  0% {opacity: 0; display: none;
+    margin-top: 15%;
+  }
+  100% {opacity: 1;
+    display: block;
+    margin-top: 0%;
+  }
+}
+
+.app-screenshot{
+  width: 75%;
+  height: auto;
+  animation-name: fadeIn;
+  animation-duration:1s;
+  animation-iteration-count: 1;
+  animation-delay: 1s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+.tagline-container{
+  position: relative;
+}
+
+.tagline{
+  position: absolute;
+  transform: translateY(50%);
+}
+
+h1{
+  text-align: center;
+  font-size: 20px !important;
+  font-family: regular;
+  color: #00ABFF !important;
+}
+
+
+.tagline h2{
+  font-family: light;
+  font-size: 45px;
+  text-align: center;
+  line-height: 35px;
+  color: orange;
 }
