Added new background

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,9 @@
 }
 
 .background-image{
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.342),rgba(0, 0, 0, 0.342)), url('./images/background.jpg');
+  background-image: url('./images/background.jpg');
   background-size: cover;
-  background-position: center; */
+  background-position: center;
   display: block;
   /* filter: blur(5px); */
   background-color: #323B42;
@@ -69,6 +69,10 @@
   font-size: 110%;
 }
 
+.main-nav li a{
+  color: black;
+  text-decoration: none;
+}
 .main-nav li:hover{
   border-bottom: 4px solid orange;
   transition: border-bottom 0.2s;
@@ -107,21 +111,22 @@
 
 .tagline{
   position: absolute;
-  transform: translateY(50%);
+  transform: translateY(20%);
 }
 
 h1{
   text-align: center;
   font-size: 20px !important;
   font-family: regular;
-  color: #00ABFF !important;
+  color: #333B43 !important;
 }
 
 
 .tagline h2{
   font-family: light;
-  font-size: 45px;
+  font-size: 50px;
+  font-weight: 400;
   text-align: center;
   line-height: 35px;
-  color: orange;
+  color: #333B43;
 }
