--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 .logo{
   height: 50px;
   width: 50px;
-  margin-left: 60px;
+  margin-left: 50px;
 }
 
 .main-nav{
@@ -112,11 +112,12 @@
 .tagline{
   position: absolute;
   transform: translateY(20%);
+  padding-top:20px
 }
 
-h1{
+p{
   text-align: center;
-  font-size: 20px !important;
+  font-size: 20px;
   font-family: regular;
   color: #333B43 !important;
 }
@@ -129,4 +130,11 @@ h1{
   text-align: center;
   line-height: 35px;
   color: #333B43;
+}
+
+.bars-icon{
+  font-size: 25px;
+  line-height: 50px;
+  padding-left: 50%;
+  display: none;
 }
